# Healtcare-Super-ai-ss5

./: .gitignore  README.md  main.py  pyproject.toml
scripts/: test_webhook.py
src/app/: main.py
src/server/: main.py
src/web/: index.html  script.js  style.css
