[project]
name = "taotun-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "gtts>=2.5.4",
    "pyaudio>=0.2.14",
    "pydub>=0.25.1",
    "requests>=2.32.5",
    "speechrecognition>=3.15.1",
    "streamlit>=1.55.0",
]
